app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* span {
  color: #0011fa;
} */

main section {
  min-height: 50vh;
}
main #hero {
  height: 90vh;
}
header {
  padding: 1rem;
}

aside {
  float: left;
}
section {
  float: right;
}
main{
  width: 79%;
}
span{
  color: #0011fa;
  font-weight: 900;
}
#drawer{
display: none;
}

@media screen and (max-width: 720px) {
  main{
    width: 100%;
  }
  #drawer{
    display: block;
  }
}
  

